Fixed alignment issue on Tile alternate mode

--- a/css/alicht.css
+++ b/css/alicht.css
@@ -607,7 +607,7 @@ section {
 .tile-wrapper.alternate .tile {
     background: none;
     box-shadow: none;
-    margin: 0 -4rem;
+    margin: 0 -3.5rem;
     padding-left: 6rem;
     padding-right: 6rem;
 }
